# HPCC-Platform

./: CMakeLists.txt
common/: CMakeLists.txt
dali/: CMakeLists.txt
esp/: CMakeLists.txt
esp/bindings/SOAP/Platform/: soapservice.cpp
esp/bindings/http/platform/: httpbinding.cpp
esp/protocols/http/: CMakeLists.txt
esp/scm/: CMakeLists.txt  espscm.cmake  ws_quod_gateways.ecm
esp/services/: CMakeLists.txt
esp/services/WsQuodGateways/: CMakeLists.txt  WsQuodGatewaysPlugin.cpp  WsQuodGatewaysService.cpp  WsQuodGatewaysService.hpp
roxie/: CMakeLists.txt
rtl/: CMakeLists.txt
system/: CMakeLists.txt
system/mp/: CMakeLists.txt
system/security/: CMakeLists.txt
tools/: CMakeLists.txt
tools/hidl/: hidlcomp.cpp
